--- a/index.html
+++ b/index.html
@@ -15,37 +15,42 @@
 
     <!--HEADER-->
     <header class="container full-container  bg-info text-white d-flex justify-content-around align-items-center">
-        <a href="index.php">
+        <a href="index.html">
             <h1 class="ml-2 d-inline text-white display-4 font-weight-bold">
                 KOVER
             </h1>
         </a>
-        <nav class="d-none d-lg-inline">
+        <!--<nav class="d-none d-lg-inline">
             <span class="bg-white text-info m-2 rounded-circle p-2 h3 font-weight-bold">
-
                 <a class="bg-white text-info m-2 rounded-circle p-2 h3 font-weight-bold" href="#">
                     Info
                 </a>
-                <a class="bg-white text-info m-2 rounded-circle p-2 h3 font-weight-bold" href="#">FAQ</a>
-                <a class="bg-white text-info m-2 rounded-circle p-2 h3 font-weight-bold" href="#">@</a>
-        </nav>
+                <a class="bg-white text-info m-2 rounded-circle p-2 h3 font-weight-bold" href="#">
+                    FAQ
+                </a>
+                <a class="bg-white text-info m-2 rounded-circle p-2 h3 font-weight-bold" href="#">
+                    @
+                </a>
+        </nav>-->
         <a href="#" class="text-white p-3 m-1 d-lg-none h1">
-            <!--Hamburger-->&#9776;</a>
+            <!--Hamburger-->&#9776;
+        </a>
     </header>
     <!--HOME-->
     <main
         class="container full-container d-flex flex-column p-3 mx-auto mt-3 mb-2 text-center w-100 w-lg-75 justify-content-around align-items-baseline h-100 rounded"
         id="home">
         <div class=" d-flex  flex-xs-column flex-lg-row flex-no-wrap flex-lg-wrap">
-            <p class="border-info text-info m-auto p-2 h3 rounded font-weight-bold">
-                Votre lettre de motivation pourrait toucher plusieurs cibles ?
+            <p class="border-info text-info m-auto p-2 h3 rounded font-weight-bold mr-4">
+                Votre lettre de motivation pourrait toucher plusieurs cibles&nbsp;?
             </p>
-            <p class="text-dark h4 mt-4">
-                <span class="font-weight-bold">Adaptez facilement les différentes versions de votre lettre</span> et
-                exportez-les au format DOC ou PDF.");
+            <p class="text-dark h4 my-5 mx-4 mx-lg-auto mxtext-center">
+                <span class="font-weight-bold">Adaptez facilement votre texte à plusieurs destinataires
+                    différents</span> et
+                exportez-le au format DOC ou PDF.
             </p>
         </div>
-        <button class="btn btn-info w-75 rounded mx-auto mt-4 h1" id="startButton">
+        <button class="btn btn-info w-50 h-100 rounded mx-auto mt-4 h1" id="startButton">
             COMMENCER
         </button>
     </main>
@@ -55,7 +60,7 @@
         class="container full-container  d-flex flex-column flex-no-wrap flex-lg-wrap p-3 mx-auto mt-3 mb-2 text-center w-100 w-lg-75 justify-content-around align-items-center h-100 rounded"
         id="choice">
         <h2 class="text-info mx-auto h2 my-3 font-weight-bold">
-            Faites votre choix
+            Sélectionnez une option
         </h2>
         <div class="d-flex flex-column flex-lg-row mr-auto ml-auto my-3">
             <button class="btn btn-info w-100 w-lg-75 rounded mx-auto mx-lg-5 mt-4 h3 p-2" id="newTextButton">
@@ -69,11 +74,11 @@
 
     <!--TEXTAREA-->
     <main
-        class="container full-container  d-flex flex-column flex-no-wrap flex-lg-wrap p-3 mx-auto mt-3 mb-2  w-100 w-lg-75 justify-content-around align-items-center h-100 rounded"
+        class="container full-container  d-flex flex-column flex-no-wrap flex-lg-wrap p-3 mx-auto mt-3 mb-2  w-100  justify-content-around align-items-center h-100 rounded"
         id="textarea">
         <h2 class="text-info mx-auto  my-3 font-weight-bold">
-            <span class="bg-info text-white p-1 rounded-circle" data-to-step="choice">&larr;</span>
-            Saisir/coller une lettre de motivation
+            <span class="text-info p-1  w-3" data-to-step="choice">&larr;</span>
+            Saisir/coller un texte
         </h2>
         <!--Outils d'édition de texte-->
         <div
@@ -137,11 +142,12 @@
         class="container full-container  d-flex flex-column flex-no-wrap flex-lg-wrap p-3 mx-auto mt-3 mb-2 text-center w-100 w-lg-75 justify-content-around align-items-center h-100 rounded"
         id="sections">
         <h2 class="text-info mx-auto  my-3 font-weight-bold">
-            <span class="bg-info text-white p-1 rounded-circle" data-to-step="choice">&larr;</span>
+            <span class="text-info p-1  w-3" data-to-step="choice">&larr;</span>
             Choisissez les éléments à adapter
         </h2>
         <div class="container full-container  d-flex my-3  align-items-start">
             <div class="px-2  bg-light w-75 w-lg-50 mr-3 border text-left" id="getUserText"></div>
+            <div class="px-2  bg-light w-75 w-lg-50 mr-3 border text-left" id="tempResult"></div>
             <div
                 class="w-25 w-lg-50 d-flex flex-column flex-wrap justify-content-center align-items-start align-items-center">
                 <p class="text-dark">
@@ -169,7 +175,7 @@
         class="container full-container  d-flex flex-column flex-no-wrap flex-lg-wrap p-3 mx-auto mt-3 mb-2 text-center w-100 w-lg-75 justify-content-around align-items-center h-100 rounded"
         id="howMany">
         <h2 class="text-info mx-auto  my-3 font-weight-bold">
-            <span class="bg-info text-white p-1 rounded-circle" data-to-step="sections">&larr;</span>
+            <span class="text-info p-1  w-3" data-to-step="choice">&larr;</span>
             Combien de versions différentes souhaitez-vous générer ?
         </h2>
         <p><span class="text-info">
@@ -183,19 +189,19 @@
     <main
         class="container full-container  d-flex flex-column flex-no-wrap flex-lg-wrap p-3 mx-auto mt-3 mb-2 text-center w-100 w-lg-75 justify-content-around align-items-center h-100  rounded"
         id="edition">
-        <h2 class="text-info mx-auto my-3 font-weight-bold">
-            <span class="bg-info text-white p-1 rounded-circle" data-to-step="howMany">&larr;</span>
+        <h2 class="text-info mx-auto  my-3 font-weight-bold">
+            <span class="text-info p-1  w-3" data-to-step="choice">&larr;</span>
             Adaptez <span id="numberOfVersions"></span>
             nouvelles versions
         </h2>
-        <div class="w-100 d-flex flex-column  justify-content-center align-items-center m-3">
-            <table id="editTable" class="w-75 h-75 table table-responsive table-striped my-3">
+        <div class="w-100 d-flex flex-column  justify-content-center align-items-center mt-auto">
+            <table id="editTable" class="table table-responsive table-striped my-3 mx-auto d-table">
                 <tr id="tableHead" class="font-weight-bold">
                     <th scope="col" class="bg-info text-white m-1 border-light">Original</th>
                 </tr>
                 <tbody id="tableInner"></tbody>
             </table>
-            <div id="editionPreview" class="h-50 w-75 word-wrap text-left m-3 bg-light border border-info">
+            <div id="editionPreview" class="word-wrap text-left m-3 bg-light border border-info p-3">
             </div>
         </div>
 
@@ -207,7 +213,7 @@
         class="container full-container  d-flex flex-column flex-no-wrap flex-lg-wrap p-3 mx-auto mt-3 mb-2 w-100 w-lg-75 justify-content-around align-items-center h-100  rounded"
         id="done">
         <h2 class="text-info mx-auto  my-3 font-weight-bold">
-            <span class="bg-info text-white p-1 rounded-circle" data-to-step="edition">&larr;</span>
+            <span class="text-info p-1  w-3" data-to-step="choice">&larr;</span>
             Terminé !
         </h2>
         <div id="letterVersions" class="d-flex flex-column flex-wrap w-100 w-lg-75 mx-auto my-3">
@@ -238,8 +244,8 @@
         class="d-flex flex-column flex-lg-row container full-container justify-content-center align-items-center mt-3">
         <a href="#" class="text-secondary m-lg-3">&copy;&nbsp;KOVER</a>
         <span class="d-none d-lg-inline text-secondary">-</span>
-        <a href="#" class="text-secondaryv m-lg-3">
-            Mentions légales
+        <a href="https://www.quentin-g.com" target="_blank" class="text-secondaryv m-lg-3">
+            quentin-g.com
         </a>
     </footer>
 
