--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
 
     <!--HEADER-->
-    <header class="container full-container  bg-info text-white d-flex justify-content-around align-items-center">
+    <header class="container full-container  bg-info text-white d-flex justify-content-center align-items-center pt-3">
         <a href="index.html">
-            <h1 class="ml-2 d-inline text-white display-4 font-weight-bold">
+            <h1 class=" d-inline text-white display-4 font-weight-bold">
                 KOVER
             </h1>
         </a>
@@ -40,14 +40,15 @@
     <main
         class="container full-container d-flex flex-column p-3 mx-auto mt-3 mb-2 text-center w-100 w-lg-75 justify-content-around align-items-baseline h-100 rounded"
         id="home">
-        <div class=" d-flex  flex-xs-column flex-lg-row flex-no-wrap flex-lg-wrap">
+        <div class=" d-flex  flex-column flex-no-wrap flex-lg-wrap mx-auto">
             <p class="border-info text-info m-auto p-2 h3 rounded font-weight-bold mr-4">
                 Votre lettre de motivation pourrait toucher plusieurs cibles&nbsp;?
             </p>
             <p class="text-dark h4 my-5 mx-4 mx-lg-auto mxtext-center">
-                <span class="font-weight-bold">Adaptez facilement votre texte à plusieurs destinataires
-                    différents</span> et
-                exportez-le au format DOC ou PDF.
+                <span class="font-weight-bold">
+                    Adaptez votre texte à vos différents destinataires
+                </span><br>
+                et exportez-le au format DOC ou PDF.
             </p>
         </div>
         <button class="btn btn-info w-50 h-100 rounded mx-auto mt-4 h1" id="startButton">
@@ -147,7 +148,6 @@
         </h2>
         <div class="container full-container  d-flex my-3  align-items-start">
             <div class="px-2  bg-light w-75 w-lg-50 mr-3 border text-left" id="getUserText"></div>
-            <div class="px-2  bg-light w-75 w-lg-50 mr-3 border text-left" id="tempResult"></div>
             <div
                 class="w-25 w-lg-50 d-flex flex-column flex-wrap justify-content-center align-items-start align-items-center">
                 <p class="text-dark">
@@ -187,22 +187,30 @@
 
     <!--EDITION STEP-->
     <main
-        class="container full-container  d-flex flex-column flex-no-wrap flex-lg-wrap p-3 mx-auto mt-3 mb-2 text-center w-100 w-lg-75 justify-content-around align-items-center h-100  rounded"
+        class="container full-container d-flex flex-column flex-no-wrap flex-lg-wrap p-3 mx-auto mt-3 mb-2 text-center w-100 w-lg-75 justify-content-start align-items-center h-100  rounded"
         id="edition">
-        <h2 class="text-info mx-auto  my-3 font-weight-bold">
+        <h2 class="text-info mx-auto  my-3 font-weight-bold" id="lastTitle">
             <span class="text-info p-1  w-3" data-to-step="choice">&larr;</span>
             Adaptez <span id="numberOfVersions"></span>
             nouvelles versions
         </h2>
-        <div class="w-100 d-flex flex-column  justify-content-center align-items-center mt-auto">
-            <table id="editTable" class="table table-responsive table-striped my-3 mx-auto d-table">
-                <tr id="tableHead" class="font-weight-bold">
-                    <th scope="col" class="bg-info text-white m-1 border-light">Original</th>
-                </tr>
-                <tbody id="tableInner"></tbody>
-            </table>
-            <div id="editionPreview" class="word-wrap text-left m-3 bg-light border border-info p-3">
+        <div class="w-100 d-flex flex-column  justify-content-center align-items-center">
+            <div id="letterVersions" class="d-flex flex-column flex-wrap w-100 w-lg-75 mx-auto my-3">
+                <div id="accordion" class=" accordion justify-content-around align-items-center">
+                    <div
+                        class=" my-3 card d-flex flex-row justify-content-around align-items-center bg-info text-white">
+                        <div>
+                            <h3 class="d-inline card-header" id="headingOne">
+                                Version Originale
+                            </h3>
+                            <button class="btn btn-link text-white btn-info border-light" data-toggle="collapse"
+                                data-target="#collapseOne">&darr;</button>
+                        </div>
+
+                    </div>
+                </div>
             </div>
+            <div id="elementH"></div>
         </div>
 
         <button class="btn btn-info rounded mx-auto mt-4 h1" id="finishButton">OK</button>
@@ -216,33 +224,12 @@
             <span class="text-info p-1  w-3" data-to-step="choice">&larr;</span>
             Terminé !
         </h2>
-        <div id="letterVersions" class="d-flex flex-column flex-wrap w-100 w-lg-75 mx-auto my-3">
-            <div id="accordion" class=" accordion  justify-content-around align-items-center">
-                <div class=" my-3 card d-flex flex-row justify-content-around align-items-center bg-info text-white">
-                    <div>
-                        <h3 class="d-inline card-header" id="headingOne">
-                            Version Originale
-                        </h3>
-                        <button class="btn btn-link text-white btn-info border-light" data-toggle="collapse"
-                            data-target="#collapseOne">&darr;</button>
-                    </div>
-                    <div>
-                        <button class="btn btn-info border-light">PDF</button>
-                        <button class="btn btn-info border-light">DOC</button>
-                        <button class="btn btn-info border-light">
-                            COPIER</button>
-                        <button class="btn btn-info border-light">
-                            IMPRIMER </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="elementH"></div>
+
     </main>
 
     <footer
         class="d-flex flex-column flex-lg-row container full-container justify-content-center align-items-center mt-3">
-        <a href="#" class="text-secondary m-lg-3">&copy;&nbsp;KOVER</a>
+        <a href="#" class="text-secondary m-lg-3">KOVER</a>
         <span class="d-none d-lg-inline text-secondary">-</span>
         <a href="https://www.quentin-g.com" target="_blank" class="text-secondaryv m-lg-3">
             quentin-g.com
@@ -254,12 +241,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
     </script>
-    <script src="./js/commonScript.js"></script>
+    <!--<script src="./js/commonScript.js"></script>
     <script src="./js/finish.js"></script>
     <script src="./js/edition.js"></script>
     <script src="./js/sections.js"></script>
     <script src="./js/choice.js"></script>
-    <script src="./js/kover.js"></script>
+    <script src="./js/kover.js"></script>-->
+    <script src="./js/global.js"></script>
 
 </body>
 
